--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,11 @@
   <head>
     <title>Video Streaming Demonstration</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="static/css/style.css"/>
+    <link rel="stylesheet" href="/static/css/style.css"/>
     
     <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-    <script src="static/js/application.js"></script>  
+    <script src="/static/js/application.js"></script>  
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700"
       rel="stylesheet"
@@ -24,7 +24,7 @@
         <div class="col" >
           <div class="sub-heading"><h2>Sensor</h2></div>
           <div class="sensor">
-            <div class="name"><p>Air Status :</p></div>
+            <div class="name"><p>Pir Status :</p></div>
             <div class="value"><p id="Status"></p></div>
           </div>
           <div class="sensor">
